@@ -1,0 +1,27 @@
+<div id="seznam" class="table-responsive"> <!-- enables horizontal scroll on small devices under 768px -->
+  <button class="btn btn-primary btn-lg btn-block">Izdelaj nov račun</button>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th>Stranka</th>
+        <th>Cena</th>
+        <th>Datum</th>
+        <th>Izdelal</th>
+        <!-- <th>&nbsp;</th>
+        <th>&nbsp;</th>
+        <th>&nbsp;</th> -->
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let e of bills; let i = index;">
+        <td>{{e.costumer}}</td>
+        <td>{{e.price | currency: "EUR": true}}</td>
+        <td>{{e.date | date: "dd-MM-yyyy"}}</td>
+        <td>{{e.user}}</td>
+        <td><button class="btn btn-sm btn-success" (click) = "toPdf(i);">PDF</button></td>
+        <td><button class="btn btn-sm btn-warning" (click) = "edit(i);">Spremeni</button></td>
+        <td><button class="btn btn-sm btn-danger" (click) = "remove(i);">Odstrani</button></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
